fix scrollbar for firefox

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body {
   color: var(--signal);
 }
 
+html {
+  scrollbar-width: none;
+}
+
 ::-webkit-scrollbar {
   width: 0;
 }
